<resources>
    <string name="app_name">Hits Radio Unikom</string>
    <string name="gallery">Gallery</string>
    <string name="home">Home</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="socialmedia">Social Media</string>
    <string name="nowplaying">NOW PLAYING</string>
    <string name="songname">Song Name</string>
    <string name="artist">Penyanyi</string>
    <string name="play">PLAY</string>
    <string name="favouriteSong">Favourite Song</string>
    <string name="songRequest">Song Request</string>
    <string name="eventsc">Events</string>
    <string name="events">Events</string>
    <string name="youtubeVideo">Youtube Video</string>
    <string name="contact">Contact</string>
    <string name="alarmClock">Alarm Clock</string>
    <string name="schedule">Schedule</string>
    <string name="about">About</string>
    <string name="setting">Setting</string>
    <string name="mediaPlayer">Media Player</string>
    <string name="caption">Fill in to request song</string>
    <string name="fullName">Full Name</string>
    <string name="email">Email</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="city">City</string>
    <string name="artistName"> Artist Name </string>
    <string name="songTitle">Song Title</string>
    <string name="send">SEND</string>

    <!--string array-->
    <string-array name="Planets">
        <item>Sun</item>
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

    <string name="htmlFormattedTextforAboutFrag">
    <![CDATA[
<b> Hits Unikom Radio</b> berdiri berdasarkan Surat Keputusan Direktorat Jendral Hukum dan Perundangan-Undangan Departemen Kehakiman No. C2.6353.HT.01.04-Th ‘90. Hits Radio menggunakan frekuensi 103.9 FM yang sebelumnya dimiliki oleh RADIO ANTASSALAM. Tepat tanggal 1 Mei 2012, gelombang tersebut berpindah tangan ke Dahlia Group. Saat itu nama radionya masih Radio Antassalam, Kemudian Tepat tanggal 31 Agustus 2013 Radio Antassalam berganti nama menjadi 103.9 HITS RADIO. Pada bulan Desember 2018 tepatnya tanggal 16 berpindah tangan ke Universitas Swasta Ternama yaitu Universitas Komputer Indonedia (UNIKOM) yang ada di bandung dan sekarang resmi menjadi HITS UNIKOM RADIO 103.9FM.

<b>MUSIK</b>
Hits Unikom Radio selalu menyuguhkan musik dan informasi yang "hits", karena sesuai tagline kami, "Semua Hits Ada Di Sini". Lagu-lagu yang diputar Hits Unikom Radio adalah hitst terpilih dari berbagai genre yang disukai anak muda, mulai dari pop, rock, R&B, hip hop, dan masih banyak lagi

<b>TARGET PENDENGAR</b>
Secara global positioning Hits UNIKOM Radio adalah anak-anak milenial berusia 17 sampai 37 tahun yang aktif berkegiatan di luar rumah, memiliki rasa ingin tahu yang tinggi terhadap isu dan tren terbaru. Atas pertimbangan tersebut, maka tema-tema yang diangkat dalam program on-air dan off-air banyak membahas soal aktifitas dan isu yang berkembang dalam di kalangan anak muda. Fun, Menghibur dan intelektual adalah konsep yang coba ditawarkan oleh Hits Unikom Radio melalui program dan konten siarannya.
    ]]>
</string>
    <string name="title_activity_main2">Media Player</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_media_player">Media Player</string>
    <string name="menu_fav_song">Favourite Song</string>
    <string name="menu_song_req">Song Request</string>
    <string name="menu_event">Event</string>
    <string name="menu_yt_video">Youtube Video</string>
    <string name="menu_social_media">Social Media</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_alarm_clock">Alarm Clock</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_about">About</string>
    <string name="title_activity_schedule">Schedule</string>
    <string name="title_activity_social">Social Media</string>
    <string name="title_activity_alarm">Alarm Clock</string>
    <string name="title_activity_favourite">Favourite</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="title_activity_event">Event</string>
    <string name="title_activity_youtube">Youtube Video</string>
    <string name="title_activity_contact">Contact</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_songreq">Song Request</string>
    <string name="warning">Maaf ya, fiturnya masih dalam pengembangan :)</string>

    <string name="enter_minutes">Minutes!</string>
    <string name="start_timer">Start Timer</string>
    <string name="stop_timer">Stop Timer</string>
    <string name="reset_timer">Reset Timer</string>
    <string name="timer">00:00:00</string>

</resources>
