<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/mediaPlayer"
            android:icon="@drawable/ic_dw_media">
        </item>
        <item
            android:id="@+id/nav_favouriteSong"
            android:title="@string/favouriteSong"
            android:icon="@drawable/ic_dw_fav">
        </item>
        <item
            android:id="@+id/nav_songRequest"
            android:title="@string/songRequest"
            android:icon="@drawable/ic_dw_req">
        </item>
        <item
            android:id="@+id/nav_gallery"
            android:title="@string/gallery"
            android:icon="@drawable/ic_dw_gallery">
        </item>
        <item
            android:id="@+id/nav_events"
            android:title="@string/events"
            android:icon="@drawable/ic_dw_event">
        </item>
        <item
            android:id="@+id/nav_youtubeVideo"
            android:title="@string/youtubeVideo"
            android:icon="@drawable/ic_dw_yt">
        </item>
        <item
            android:id="@+id/nav_socialMedia"
            android:title="@string/socialmedia"
            android:icon="@drawable/ic_dw_social">
        </item>
        <item
            android:id="@+id/nav_contact"
            android:title="@string/contact"
            android:icon="@drawable/ic_dw_contact">
        </item>
        <item
            android:id="@+id/nav_alarmClock"
            android:title="@string/alarmClock"
            android:icon="@drawable/ic_dw_alarm">
        </item>
        <item
            android:id="@+id/nav_schedule"
            android:title="@string/schedule"
            android:icon="@drawable/ic_dw_schedule">
        </item>
        <item
            android:id="@+id/nav_about"
            android:title="@string/about"
            android:icon="@drawable/ic_dw_about">
        </item>
    </group>
</menu>