<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient0"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.SongReqActivity"
    tools:showIn="@layout/app_bar_song_req">

    <TextView
        android:id="@+id/caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/caption"
        style="@style/TextAppearance.AppCompat.Headline"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/fullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/caption"
        android:hint="@string/fullName" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:layout_below="@+id/fullName"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/et_ph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:layout_below="@+id/et_email"
        android:hint="@string/phoneNumber"/>

    <EditText
        android:id="@+id/et_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:layout_below="@+id/et_ph"
        android:hint="@string/city"/>

    <EditText
        android:id="@+id/wt_artist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/et_city"
        android:hint="@string/artistName"/>

    <EditText
        android:id="@+id/et_song"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:layout_below="@+id/wt_artist"
        android:hint="@string/songTitle"/>

    <Button
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:layout_centerInParent="true"
        android:layout_below="@id/et_song"
        android:text="@string/send"/>


</RelativeLayout>